# prod-watchdog-env

./: .gitignore  Dockerfile  README.md  client.py  gradio_ui.py  inference.py  models.py  openenv.yaml  pyproject.toml  ui.py
docs/: ARCHITECTURE.md
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
tests/: mimic_validation_phase1.py
